--- a/src/components/LandingPagePreview.stripe.module.css
+++ b/src/components/LandingPagePreview.stripe.module.css
@@ -140,7 +140,7 @@
 
 .valueList li {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
   font-size: 1.125rem;
   color: #333333;
